# weight_tracker

./: .ic-assets.json5  Cargo.toml  README.md  dfx.json  instrucktions.txt  package-lock.json  package.json  tarpaulin-report.html
src/weight_tracker_backend/: Cargo.toml  README.md  weight_tracker_backend.did
src/weight_tracker_backend/src/: lib.rs  models.rs  repositories.rs  services.rs  tests.rs  traits.rs
src/weight_tracker_backend/src/tests/: integration_tests.rs  mod.rs  models_tests.rs  repositories_tests.rs  services_tests.rs
src/weight_tracker_frontend/: .ic-assets.json5  index.html  package.json  vite.config.js  vitest.config.js
src/weight_tracker_frontend/coverage/: index.html
src/weight_tracker_frontend/coverage/.tmp/: coverage-0.json  coverage-1.json  coverage-10.json  coverage-2.json  coverage-3.json  coverage-4.json  coverage-5.json  coverage-6.json  coverage-7.json  coverage-8.json  coverage-9.json
src/weight_tracker_frontend/coverage/src/: App.jsx.html  index.html  main.jsx.html
src/weight_tracker_frontend/src/: App.css  App.jsx
src/weight_tracker_frontend/src/components/: AuthHeader.jsx  BatchCard.jsx  BatchForm.jsx  BatchList.jsx  CollaboratorList.jsx  GuidedTour.jsx  Jumbotron.jsx  LoadingSpinner.jsx  QuickGuide.jsx  WeightForm.jsx  WeightTable.jsx  WelcomeScreen.css  WelcomeScreen.jsx
src/weight_tracker_frontend/src/hooks/: useActor.js  useAuth.js  useBatches.js  useCollaborators.js  useWeights.js
src/weight_tracker_frontend/src/services/: AuthService.js  BatchService.js  CollaboratorService.js  NotificationService.js  (+1 more)
(+40 files in other folders)
