[package]
name = "weight_tracker_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
cargo-tarpaulin = "0.18"
